# costgpt

./: .env.example  .gitignore  README.md  pyproject.toml
costgpt/: __init__.py  client.py  pricing.py  tracker.py
costgpt/instruments/: __init__.py  anthropic.py  openai.py
hosted/: Dockerfile  __init__.py  app.py  db.py  requirements.txt  schema.sql
hosted/api/: auth.py  routes.py
hosted/templates/: base.html  dashboard.html  keys.html  landing.html  login.html  signup.html
hosted/web/: routes.py
